[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/tiles/mineral_01.png" type="Texture" id=1]
[ext_resource path="res://scripts/HudDropDisplay.gd" type="Script" id=2]
[ext_resource path="res://resources/Aquarius-RegularMono.ttf" type="DynamicFontData" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0.392157, 0.470588, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0.392157, 0.470588, 1 )

[sub_resource type="DynamicFont" id=4]
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0.392157, 0.470588, 1 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 3 )

[node name="DropDisplay" type="PanelContainer"]
margin_right = 147.0
margin_bottom = 25.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 147.0
margin_bottom = 25.0
custom_constants/separation = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
margin_right = 25.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 0 )
custom_styles/panel = SubResource( 2 )

[node name="DropTexture" type="TextureRect" parent="HBoxContainer/PanelContainer"]
margin_right = 25.0
margin_bottom = 25.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="CountLabel" type="Label" parent="HBoxContainer"]
margin_left = 26.0
margin_right = 86.0
margin_bottom = 25.0
rect_min_size = Vector2( 60, 0 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "0000"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ValueLabel" type="Label" parent="HBoxContainer"]
margin_left = 87.0
margin_right = 147.0
margin_bottom = 25.0
rect_min_size = Vector2( 60, 0 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "0000"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PosTween" type="Tween" parent="."]
